plugins {
    id 'java-library'
    id 'maven-publish'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility JavaVersion.VERSION_17
}

dependencies {
    implementation libs.asm.v96
    implementation libs.asm.tree
    implementation libs.annotations
    testImplementation libs.junit
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
    }
    test {
        java {
            srcDirs = ['src/test/java']
        }
    }
}

test {
    jvmArgs += [
        '--add-opens', 'java.base/java.util.stream=ALL-UNNAMED',
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
    ]
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            groupId = 'com.justnothing'
            artifactId = 'javainterpreter'
            version = '1.0.0'
        }
    }
}

tasks.register('fatJar', Jar) {
    archiveBaseName = 'engine-fat'
    archiveExtension = 'jar'
    manifest {
        attributes 'Main-Class': 'com.justnothing.javainterpreter.REPL'
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}
